# coworker

./: .dockerignore  .gitignore  Dockerfile  compose.build.yaml  compose.dev.yaml  compose.yaml  package-lock.json  package.json  sample.env  tsconfig.json
agent/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  sample.env
agent/pipelines/: add_calendar_event_pipeline.py  file_pipeline.py  ingestion_pipeline.py  query_pipeline.py  store.py  suggest_pipeline.py  text_embeder.py
agent/pipelines/base/: chat_history_response.py  db.py  embedding.py  video_audio_reader.py
agent/prompts/: add_calendar_event_system.txt  add_calendar_event_user.txt  calendar_prompts.py  git_prompt.py  main.txt  main_prompt.py  query-template.txt
agent/scripts/: split_media.sh
agent/services/: agent_service.py
agent/utils/: ext_to_lang.py
prisma/: schema.prisma
prisma/migrations/20240519093725_init/: migration.sql
prisma/migrations/20240519095703_add_admin_chat_id/: migration.sql
prisma/migrations/20240520183455_add_source/: migration.sql
prisma/migrations/20240521181152_chat_history/: migration.sql
prisma/migrations/20240521183906_fix_chat_history/: migration.sql
src/: app.controller.spec.ts  app.controller.ts  app.module.ts
src/agent/: agent.service.ts
src/github/: github.service.ts
src/google-workspace/: google-workspace.service.ts
src/queues/: documents.queue.ts  files.queue.ts  queues.ts
src/telegram/: context.ts  responses.ts  telegram-admin.service.ts  telegram.service.ts
src/utils/: generate-session.js
(+15 files in other folders)
